--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -8,6 +8,8 @@
 
 \lnTitlePage{22}{24}{hPZGoEAXwY0}
 
+\lnThought{The \ul{aesthetics} of code is a highly subjective matter\dots or is it?}
+
 \pptBanner{Which One \ul{Looks} Better for You?}
 \begin{pptWide}{3}
 C:\par
@@ -45,7 +47,10 @@ end
 \end{ffcode}
 }
 \end{pptWide}
+{\small Hint: it's \emph{not} only a matter of \emph{taste}.\par}
 \plush{}
+
+\lnThought{Which matters more: code \ul{clarity} or \ul{efficiency}?}
 
 \lnQuote
   [Brian Kernighan]
@@ -65,6 +70,8 @@ end
   ``The best style enforcer is the computer ... but \ul{only} if we can easily cope with its ever-present restrictions.''
   \lnSource{marca1981some}
   \end{multicols}}
+
+\lnThought{We can measure the quality of code formatting with a discrete \ul{metric}, can't we?}
 
 \lnQuote
   [Michael J. Rees]
@@ -100,42 +107,20 @@ end
   \end{multicols}}
 
 \lnQuote
+  [Henry Ledgard]
+  {henry-ledgard}
+  {An individual's body language helps clarify the spoken word. In a similar sense, the programmer relies on \ul{white space}---what is not said directly---in the code to communicate logic, intent, and understanding.}
+  {green2011coding}
+\lnPitch{\includegraphics[width=.95\linewidth]{three-ifs.png}
+  \lnSource{green2011coding}}
+
+\lnThought{What are the practical implications of using style checkers?}
+
+\lnQuote
   [Warren Harrison]
   {warren-harrison}
   {To determine the relationship (if any) between the style metric and error proneness of each module, we performed a simple correlation analysis. The results were discouraging in the sense that a correlation of only -0.052 existed between the observed error frequency and the style metric, suggesting that the style metric bore \ul{little relationship} to the error frequency encountered in our data.}
   {harrison1986note}
-
-\lnPitch{
-  \pptBanner{My Favorite Style Checkers}
-  \begin{itemize}
-    \item \href{https://eslint.org/}{ESLint} (2013) for JavaScript
-    \item \href{https://clang.llvm.org/extra/clang-tidy/}{Clang-Tidy} (2007?) for C++
-    \item \href{https://github.com/pylint-dev/pylint}{Pylint} (2006) for Python
-    \item \href{https://github.com/rubocop/rubocop}{Rubocop} (2012) for Ruby
-    \item \href{https://github.com/squizlabs/PHP_CodeSniffer}{PHP\_CodeSniffer} (2011) for PHP
-    \item \href{https://github.com/rust-lang/rustfmt}{rustfmt} (2015) for Rust
-    \item \href{https://www.qulice.com}{Qulice} by \citet{bugayenko2014blog0813} for Java: \href{https://checkstyle.sourceforge.io/}{Checkstyle} (2001) + \href{https://pmd.github.io/}{PMD} (2022)
-  \end{itemize}}
-
-\lnPitch{
-  \pptBanner{How Many Rules in Style Checkers?}
-  \begin{itemize}
-    \item 690+ in Clang-Tidy (C++)
-    \item 550+ in Rubocop (Ruby)
-    \item 400+ in PMD (Java)
-    \item 130+ in Checkstyle (Java)
-    \item 120+ in Pylint (Python)
-  \end{itemize}
-  \par{\small Some/most of the rules no only check style, but also find bugs.\par}}
-
-\lnPitch{
-  \pptBanner{Some Exotic Style Checkers}
-  \begin{itemize}
-    \item \href{https://github.com/koalaman/shellcheck}{Shellcheck} for Bash
-    \item \href{https://github.com/markdownlint/markdownlint}{markdownlint} for Markdown
-    \item \href{https://github.com/mrtazz/checkmake}{Checkmake} for Makefile
-    \item \href{https://github.com/yegor256/xcop}{xcop} for XML
-  \end{itemize}}
 
 \lnQuote
   [Christian Collberg]
@@ -149,6 +134,12 @@ end
   {Formally, we can characterize software readability as a mapping from a code sample to a finite score domain. We presented human annotators with a sequence of short code selections, called snippets. The annotators were asked to individually score each snippet based on their personal estimation of readability. Our metric for readability is \ul{derived} (using ML) from these judgments.}
   {buse2009learning}
 
+\lnQuote
+  [Cathal Boogerd]
+  {cathal-boogerd}
+  {First, there are 9 out of 72 rules for which violations were observed that perform significantly better than a random predictor at locating fault-related lines. Second, we observed a negative correlation between MISRA rule violations and observed faults. In addition, 29 out of 72 rules had a zero true positive rate. This makes it possible that adherence to the MISRA standard \ul{as a whole} would have made the software \ul{less reliable}.}
+  {boogerd2008assessing}
+
 \lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=.8\linewidth]{readability.png}
@@ -156,20 +147,6 @@ end
   ``We find, for example, that factors like 'average line length' and 'average number of identifiers per line' are very important to readability. Conversely, 'average identifier length' is not, in itself, a very predictive factor,''
   \lnSource{buse2009learning}
   \end{multicols}}
-
-\lnQuote
-  [Cathal Boogerd]
-  {cathal-boogerd}
-  {First, there are 9 out of 72 rules for which violations were observed that perform significantly better than a random predictor at locating fault-related lines. Second, we observed a negative correlation between MISRA rule violations and observed faults. In addition, 29 out of 72 rules had a zero true positive rate. This makes it possible that adherence to the MISRA standard \ul{as a whole} would have made the software \ul{less reliable}.}
-  {boogerd2008assessing}
-
-\lnQuote
-  [Henry Ledgard]
-  {henry-ledgard}
-  {An individual's body language helps clarify the spoken word. In a similar sense, the programmer relies on \ul{white space}---what is not said directly---in the code to communicate logic, intent, and understanding.}
-  {green2011coding}
-\lnPitch{\includegraphics[width=.95\linewidth]{three-ifs.png}
-  \lnSource{green2011coding}}
 
 \lnQuote
   [Peter C. Rigby]
@@ -229,5 +206,39 @@ end
   ``Although there is a tendency for the shift in maintainability to be positive when the change in warning density is negative and vice versa, the strength of the relationship is negligible.''
   \lnSource{herivcko2023relationship}
   \end{multicols}}
+
+\lnThought{What style checkers do you use in your projects?}
+
+\lnPitch{
+  \pptBanner{My Favorite Style Checkers}
+  \begin{itemize}
+    \item \href{https://eslint.org/}{ESLint} (2013) for JavaScript
+    \item \href{https://clang.llvm.org/extra/clang-tidy/}{Clang-Tidy} (2007?) for C++
+    \item \href{https://github.com/pylint-dev/pylint}{Pylint} (2006) for Python
+    \item \href{https://github.com/rubocop/rubocop}{Rubocop} (2012) for Ruby
+    \item \href{https://github.com/squizlabs/PHP_CodeSniffer}{PHP\_CodeSniffer} (2011) for PHP
+    \item \href{https://github.com/rust-lang/rustfmt}{rustfmt} (2015) for Rust
+    \item \href{https://www.qulice.com}{Qulice} by \citet{bugayenko2014blog0813} for Java: \href{https://checkstyle.sourceforge.io/}{Checkstyle} (2001) + \href{https://pmd.github.io/}{PMD} (2022)
+  \end{itemize}}
+
+\lnPitch{
+  \pptBanner{How Many Rules in Style Checkers?}
+  \begin{itemize}
+    \item 690+ in Clang-Tidy (C++)
+    \item 550+ in Rubocop (Ruby)
+    \item 400+ in PMD (Java)
+    \item 130+ in Checkstyle (Java)
+    \item 120+ in Pylint (Python)
+  \end{itemize}
+  \par{\small Some/most of the rules no only check style, but also find bugs.\par}}
+
+\lnPitch{
+  \pptBanner{Some Exotic Style Checkers}
+  \begin{itemize}
+    \item \href{https://github.com/koalaman/shellcheck}{Shellcheck} for Bash
+    \item \href{https://github.com/markdownlint/markdownlint}{markdownlint} for Markdown
+    \item \href{https://github.com/mrtazz/checkmake}{Checkmake} for Makefile
+    \item \href{https://github.com/yegor256/xcop}{xcop} for XML
+  \end{itemize}}
 
 \end{document}
