--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -50,6 +50,12 @@ end
 {\small Hint: it's \emph{not} only a matter of \emph{taste}.\par}
 \plush{}
 
+\lnQuote
+  [Dustin Boswell]
+  {dustin-boswell}
+  {If one of these styles is chosen over the other, it doesn't substantially affect the readability of the codebase. But if these two styles are \ul{mixed} throughout the code, it does affect the readability. Consistent style is more important than the `right' style.}
+  {boswell2011art}
+
 \lnThought{Which matters more: code \ul{clarity} or \ul{efficiency}?}
 
 \lnQuote
