--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -56,6 +56,12 @@ end
   {If one of these styles is chosen over the other, it doesn't substantially affect the readability of the codebase. But if these two styles are \ul{mixed} throughout the code, it does affect the readability. Consistent style is more important than the `right' style.}
   {boswell2011art}
 
+\lnQuote
+  [Robert Martin]
+  {robert-martin}
+  {}
+  {martin2011clean}
+
 \lnThought{Which matters more: code \ul{clarity} or \ul{efficiency}?}
 
 \lnQuote
@@ -139,13 +145,6 @@ end
   {raymond-buse}
   {Formally, we can characterize software readability as a mapping from a code sample to a finite score domain. We presented human annotators with a sequence of short code selections, called snippets. The annotators were asked to individually score each snippet based on their personal estimation of readability. Our metric for readability is \ul{derived} (using ML) from these judgments.}
   {buse2009learning}
-
-\lnQuote
-  [Cathal Boogerd]
-  {cathal-boogerd}
-  {First, there are 9 out of 72 rules for which violations were observed that perform significantly better than a random predictor at locating fault-related lines. Second, we observed a negative correlation between MISRA rule violations and observed faults. In addition, 29 out of 72 rules had a zero true positive rate. This makes it possible that adherence to the MISRA standard \ul{as a whole} would have made the software \ul{less reliable}.}
-  {boogerd2008assessing}
-
 \lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=.8\linewidth]{readability.png}
@@ -153,6 +152,12 @@ end
   ``We find, for example, that factors like 'average line length' and 'average number of identifiers per line' are very important to readability. Conversely, 'average identifier length' is not, in itself, a very predictive factor,''
   \lnSource{buse2009learning}
   \end{multicols}}
+
+\lnQuote
+  [Cathal Boogerd]
+  {cathal-boogerd}
+  {First, there are 9 out of 72 rules for which violations were observed that perform significantly better than a random predictor at locating fault-related lines. Second, we observed a negative correlation between MISRA rule violations and observed faults. In addition, 29 out of 72 rules had a zero true positive rate. This makes it possible that adherence to the MISRA standard \ul{as a whole} would have made the software \ul{less reliable}.}
+  {boogerd2008assessing}
 
 \lnQuote
   [Peter C. Rigby]
