--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -14,7 +14,7 @@
   {Shipping first time code is like going into \ul{debt}. A little debt speeds development so long as it is paid back promptly with a rewrite. The danger occurs when the debt is not repaid. Every minute spent on not-quite-right code counts as \ul{interest} on that debt.}
   {cunningham1992}
 
-\lnThought{Technical debt hurts}
+\lnThought{Technical debt hurts.}
 
 \lnQuote
   [Martin Fowler]
@@ -25,10 +25,10 @@
 \lnQuote
   [Mark Seemann]
   {mark-seemann}
-  {I like the gardening metaphor's emphasis on activities that combat disorder. Just as you must prune and weed a garden, you must refactor and pay off technical debt in your code bases.}
+  {I like the gardening metaphor's emphasis on activities that combat disorder. Just as you must prune and weed a \ul{garden}, you must refactor and pay off technical debt in your code bases.}
   {seemann2021code}
 
-\lnThought{Scientifically, it's proven too}
+\lnThought{Scientifically, it's proven too.}
 
 \lnQuote
   [Emad Shihab]
@@ -65,7 +65,7 @@
 \lnQuote
   [Eric Allman]
   {eric-allman}
-  {Technical debt is inevitable. the issue is not eliminating debt, but rather managing it. When a project starts, the team almost never has a full grasp on the totality of the problem.}
+  {Technical debt is inevitable. The issue is not eliminating debt, but rather managing it. When a project starts, the team almost never has a full grasp on the totality of the problem.}
   {allman2012managing}
 
 \pptBanner{Puzzle Driven Development: Motivating Example}
@@ -153,15 +153,15 @@ assert fibonacci(10) == 55;
 
 \lnPitch{
 \pptBanner{250+ Puzzles in \texttt{objectionary/eo}}
-\includegraphics[width=.6\textwidth]{0pdd-screenshot.png}\par
-{\small Source: \url{https://www.0pdd.com/p?name=objectionary/eo}\par}}
+\includegraphics[width=.5\textwidth]{0pdd-screenshot.png}\par
+{\scriptsize Source: \url{https://www.0pdd.com/p?name=objectionary/eo}\par}}
 
 \lnPitch{
 \pptBanner{Sample Ticket Submitted by 0pdd.com to \texttt{objectionary/eo}}
 \includegraphics[width=.6\textwidth]{ticket.png}\par
-{\small Source: \url{https://github.com/objectionary/eo/issues/2700}\par}}
+{\scriptsize Source: \url{https://github.com/objectionary/eo/issues/2700}\par}}
 
-\lnThought{Next, we AI to help us manage long backlog with puzzles}
+\lnThought{Next, we AI to help us manage long backlog with puzzles.}
 
 \lnQuote
   [Giancarlo Succi]
