--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -23,6 +23,12 @@
   {fowler1999refactoring}
 
 \lnQuote
+  [Philippe Kruchten]
+  {philippe-kruchten}
+  {By identifying concrete items of technical debt, considering their impact over time, evaluating the lifecycle costs associated with them, and introducing mechanisms for expressing technical debt and estimating its impact, an organization can help everyone better understand the \ul{pains} of software evolution.}
+  {kruchten2019managing}
+
+\lnQuote
   [Mark Seemann]
   {mark-seemann}
   {I like the gardening metaphor's emphasis on activities that combat disorder. Just as you must prune and weed a \ul{garden}, you must refactor and pay off technical debt in your code bases.}
