--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -14,7 +14,7 @@
   {Shipping first time code is like going into \ul{debt}. A little debt speeds development so long as it is paid back promptly with a rewrite. The danger occurs when the debt is not repaid. Every minute spent on not-quite-right code counts as \ul{interest} on that debt.}
   {cunningham1992}
 
-\lnThought{Technical debt hurts.}
+\lnThought{Technical debt may hurt if it's not managed earlier rather than never.}
 
 \lnQuote
   [Martin Fowler]
@@ -33,6 +33,12 @@
   {mark-seemann}
   {I like the gardening metaphor's emphasis on activities that combat disorder. Just as you must prune and weed a \ul{garden}, you must refactor and pay off technical debt in your code bases.}
   {seemann2021code}
+
+\lnQuote
+  [Neil Ernst]
+  {neil-ernst}
+  {Debt is not, by itself, the problem. The problem is not identifying and \ul{acknowledging} the debt, not \ul{measuring} the debt, and not \ul{paying} the debt back.}
+  {ernst2021technical}
 
 \lnThought{Scientifically, it's proven too.}
 
