--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -9,6 +9,8 @@
 
 \lnTitlePage{23}{24}{QK2XQvYoEpQ}
 
+\lnThought{Analyzing a program before it starts running may help detect its defects earlier.}
+
 \lnQuote
   [Steven Johnson]
   {steven-johnson}
@@ -153,6 +155,8 @@ cast from float to int
 Line 2: Division by zero
 \end{multicols}}
 \plush{}
+
+\lnThought{Static analyzers can fail in two ways: by falsely reporting bugs or by missing them.}
 
 \lnQuote
   [Brian Chess]
