--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -57,10 +57,25 @@ end
   {boswell2011art}
 
 \lnQuote
-  [Robert Martin]
-  {robert-martin}
-  {}
-  {martin2011clean}
+  [\nospell{Krist{\'\i}n Fj{\'o}la T{\'o}masd{\'o}ttir}]
+  {kristin-tomasdottir}
+  {Every single interview participant mentioned that one of the reasons why they use a linter is to maintain code \ul{consistency}.}
+  {tomasdottir2018adoption}
+\plush{\pptBanner{Why do JavaScript developers use linters?}
+  \begin{itemize}
+  \setlength\itemsep{0em}
+  \item Prevent Errors
+  \item Augment Test Suites
+  \item Avoid Ambiguous and Complex Code
+  \item Maintain Code Consistency
+  \item Faster Code Review
+  \item Spare Developers' Feelings
+  \item Save Discussion Time
+  \item Learn About JavaScript
+  \end{itemize}
+  \lnSource{tomasdottir2017and}}
+\lnPitch{\includegraphics[width=.95\linewidth]{rules.png}
+  \lnSource{tomasdottir2018adoption}}
 
 \lnThought{Which matters more: code \ul{clarity} or \ul{efficiency}?}
 
