--- a/24-neural/24-neural.tex
+++ b/24-neural/24-neural.tex
@@ -80,5 +80,16 @@
 \lnPitch{\includegraphics[width=.7\linewidth]{catid.png}
   \lnSource{taylor2023}}
 
+\lnQuote
+  [Zhiyun Qian]
+  {zhiyun-qian}
+  {Our real-world evaluations identified four previously undiscovered UBI (Use Before Initialization) bugs in the mainstream Linux kernel, which the Linux community has acknowledged. This study reaffirms the potential of \ul{marrying} static program analysis with LLMs, setting a compelling direction for future research in this area.}
+  {li2024enhancing}
+
+\lnQuote
+  [Chengnian Sun]
+  {chengnian-sun}
+  {LATTE combines code snippets to construct \ul{prompts}. LATTE detected a total of 119 unique bugs, including 37 previously unknown bugs (10 CVE numbers have been given due to high threat), which outperforms the state of the art.}
+  {liu2025llm}
 
 \end{document}
