--- a/24-neural/24-neural.tex
+++ b/24-neural/24-neural.tex
@@ -87,6 +87,12 @@
   {li2024enhancing}
 
 \lnQuote
+  [Mohammad Mahdi Mohajer]
+  {mohammad-mahdi-mohajer}
+  {Our study demonstrates that ChatGPT can achieve \ul{remarkable performance} in the mentioned static analysis tasks, including bug detection and false-positive warning removal.}
+  {mohajer2024effectiveness}
+
+\lnQuote
   [Chengnian Sun]
   {chengnian-sun}
   {LATTE combines code snippets to construct \ul{prompts}. LATTE detected a total of 119 unique bugs, including 37 previously unknown bugs (10 CVE numbers have been given due to high threat), which outperforms the state of the art.}
