--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -276,6 +276,19 @@ int f(int x) {
   \lnSource{sarif2023}
   \end{multicols}}
 
+\lnThought{Some bugs are significant enough to be assigned unique identifiers, such as CVEs (Common Vulnerabilities and Exposures).}
+
+\lnPitch{
+  \pptBanner{CVE Databases:}
+  \begin{itemize}
+  \item \href{https://www.cve.org}{CVE.org}
+  \item National Vulnerability Database (\href{https://nvd.nist.gov/vuln}{NVD})
+  \item \href{https://osv.dev/}{OSV.dev}
+  \item \href{https://www.cvedetails.com/}{CVEDetails.com}
+  \end{itemize}}
+
+\lnThought{How about asking static analyzers to detect good code instead of bad code?}
+
 \lnQuote
   [\nospell{Florian Oberm{\"u}ller}]
   {florian-obermuller}
