--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -180,7 +180,7 @@ int f(int x) {
 \end{multicols}
 \plush{}
 
-\plush{
+\lnPitch{
   \pptBanner{Precision \& Recall}
   \emph{Precision} is the fraction of relevant instances among the retrieved instances (100\% precision means \emph{soundness}).
   \emph{Recall} is the fraction of relevant instances that were retrieved (100\% recall means \emph{completeness}).
@@ -229,8 +229,9 @@ int f(int x) {
 
 \lnThought{Existing open-source static analyzers are less powerful than commercial ones.}
 
-\plush{\pptBanner{My Favorite Static Analyzers}
-\begin{itemize}
+\lnPitch{
+  \pptBanner{My Favorite Static Analyzers}
+  \begin{itemize}
   \item Java:
     \href{https://spotbugs.github.io/}{SpotBugs},
     \href{https://checkstyle.sourceforge.io/}{Checkstyle},
@@ -245,8 +246,9 @@ int f(int x) {
   \par
   There are many more of them: \newline \url{https://github.com/analysis-tools-dev/static-analysis}}
 
-\plush{\pptBanner{Some Static Analysis Mechanisms}
-\begin{itemize}
+\lnPitch{
+  \pptBanner{Some Static Analysis Mechanisms}
+  \begin{itemize}
   \item Data Flow Analysis
   \item Symbolic Execution
   \item Model Checking
@@ -254,8 +256,9 @@ int f(int x) {
   \end{itemize}\par
   You may want to watch my ``\href{https://github.com/yegor256/ppa}{Practical Program Analysis}'' course.}
 
-\plush{\pptBanner{For some tools, you have to pay:}
-\begin{itemize}
+\lnPitch{
+  \pptBanner{For some tools, you have to pay:}
+  \begin{itemize}
   \setlength\itemsep{0em}
   \item Coverity by \href{https://scan.coverity.com/}{Synopsys} (US)
   \item Klockwork by \href{https://www.perforce.com/}{Perforce} (US)
