--- a/24-neural/24-neural.tex
+++ b/24-neural/24-neural.tex
@@ -8,11 +8,15 @@
 
 \lnTitlePage{24}{24}{6Rog8QhuXTY}
 
+\lnThought{Non-deterministic methods of code analysis may be more effective than symbolic execution or data flow analysis.}
+
 \lnQuote
   [Michael Pradel]
   {michael-pradel}
   {\ul{Neural} software analysis offers a fresh approach, enhancing or even \ul{surpassing} traditional program analysis in some areas.}
   {pradel2021neural}
+
+\lnThought{Machine Learning is the most obvious non-deterministic method of code analysis.}
 
 \lnQuote
   [Francesca Arcelli Fontana]
@@ -59,6 +63,8 @@
 \lnPitch{\includegraphics[width=.95\linewidth]{code2vec-2.png}
   \lnSource{alon2019code2vec}}
 
+\lnThought{Since 2023, Large Language Models (LLM) started to demonstrate code analysis capabilities.}
+
 \lnQuote
   [Mohammad Mahdi Mohajer]
   {mohammad-mahdi-mohajer}
@@ -87,8 +93,8 @@
   {li2024enhancing}
 
 \lnQuote
-  [Mohammad Mahdi Mohajer]
-  {mohammad-mahdi-mohajer}
+  [Reem Aleithan]
+  {reem-aleithan}
   {Our study demonstrates that ChatGPT can achieve \ul{remarkable performance} in the mentioned static analysis tasks, including bug detection and false-positive warning removal.}
   {mohajer2024effectiveness}
 
