--- a/05-maintainability-index/05-maintainability-index.tex
+++ b/05-maintainability-index/05-maintainability-index.tex
@@ -64,7 +64,7 @@
   \begin{multicols}{2}
   \pptPic{.95}{formula-2.png}
   \par\columnbreak\par
-  ``Approximately 50 regression models were constructed in an attempt to identify simple models that could be calculated from existing tools and still be generic enough to apply to a wide range of software systems. The regression model that seemed most applicable was a four-metric polynomial based on  \begin{inparaenum}[1)]\item Halstead’s effort, \item extended cyclomatic complexity, \item lines of code, and \item number of comments.\end{inparaenum}''
+  ``Approximately 50 regression models were constructed in an attempt to identify simple models that could be calculated from existing tools and still be generic enough to apply to a wide range of software systems. The regression model that seemed most applicable was a four-metric polynomial based on  \begin{inparaenum}[1)]\item Halstead's effort, \item extended cyclomatic complexity, \item lines of code, and \item number of comments.\end{inparaenum}''
   \end{multicols}}
 
 \lnPitch{
