--- a/08-TCC-and-LCC/08-TCC-and-LCC.tex
+++ b/08-TCC-and-LCC/08-TCC-and-LCC.tex
@@ -139,7 +139,7 @@ class Article
 }
 \par\columnbreak\par
 \begin{spacing}{0.9}
-``The \ff{Article} copies method \ff{print()} and attribute body from the \ff{Manuscript}, as if it’s not a living organism, but rather a dead one from which we \ul{inherit} its parts.''\par
+``The \ff{Article} copies method \ff{print()} and attribute body from the \ff{Manuscript}, as if it's not a living organism, but rather a dead one from which we \ul{inherit} its parts.''\par
 ``Implementation inheritance was created as a mechanism for code reuse. It doesn't fit into OOP at all.''\par
 \lnSource{bugayenko2016blog0913}
 \end{spacing}
