--- a/15-code-coverage/15-code-coverage.tex
+++ b/15-code-coverage/15-code-coverage.tex
@@ -8,7 +8,7 @@
 
 \lnTitlePage{15}{24}{pJrXQ5rptig}
 
-\lnThought{A line of code is covered if it is executed during the test suite’s run.}
+\lnThought{A line of code is covered if it is executed during the test suite's run.}
 
 \pptBanner{Example, Part I}
 \begin{multicols}{2}
