--- a/23-static-analysis/23-static-analysis.tex
+++ b/23-static-analysis/23-static-analysis.tex
@@ -161,7 +161,7 @@ Line 2: Division by zero
 \lnQuote
   [Brian Chess]
   {brian-chess}
-  {Beware of any tool that says something like, `zero defects found, your program is, rather, now secure.' The appropriate output is, `sorry, \ul{couldn’t find} any more bugs.'}
+  {Beware of any tool that says something like, `zero defects found, your program is, rather, now secure.' The appropriate output is, `sorry, \ul{couldn't find} any more bugs.'}
   {chess2004static}
 
 \pptBanner{False Negative vs. False Positive}
