--- a/21-builds/21-builds.tex
+++ b/21-builds/21-builds.tex
@@ -55,6 +55,12 @@
   {[In Microsoft], the rule is that if developers check in code that `breaks' the \ul{build} by preventing it from completing the \ul{recompilation}, they must fix the defect \ul{immediately}.}
   {cusumano1997microsoft}
 
+\lnQuote
+  [Scott MacLellan]
+  {scott-maclellan}
+  {A \textcolor{orange}{preflight build} or preflight is a build which runs a portion of your CI \ul{on a branch} being developed. We have introduced preflights into several projects and I can say the results are dramatic.}
+  {maclellan2015}
+
 \lnThought{Statistics show that CI helps.}
 
 \lnQuote
