--- a/06-coupling/06-coupling.tex
+++ b/06-coupling/06-coupling.tex
@@ -78,6 +78,12 @@
   {chidamber1994metrics}
 
 \lnQuote
+  [Fernando Brito e Abreu]
+  {fernando-brito-e-abreu}
+  {Coupling Factor (COF) has a very high positive correlation with all quality measures. Therefore, as coupling among classes increases, the defect density and normalized rework are also expected to increase. This result shows that coupling in software systems has a strong negative impact on software quality and therefore should be kept to the minimum required during design.}
+  {brito1996evaluating}
+
+\lnQuote
   {../06-coupling/dcc}
   {\ul{Direct Class Coupling (DCC)} --- this metric is a count of the different number of classes that a class is directly related to. The metric includes classes that are directly related by attribute declarations and message passing (parameters) in methods.}
   {bansiya2002}
