--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -74,7 +74,7 @@ end
   \item Learn About JavaScript
   \end{itemize}
   \lnSource{tomasdottir2017and}}
-\lnPitch{\includegraphics[width=.95\linewidth]{rules.png}
+\lnPitch{\includegraphics[width=.95\linewidth]{../23-static-analysis/rules.png}
   \lnSource{tomasdottir2018adoption}}
 
 \lnThought{Which matters more: code \ul{clarity} or \ul{efficiency}?}
@@ -250,6 +250,7 @@ end
 \lnPitch{
   \pptBanner{How Many Rules in Style Checkers?}
   \begin{itemize}
+    \setlength\itemsep{0em}
     \item 690+ in Clang-Tidy (C++)
     \item 550+ in Rubocop (Ruby)
     \item 400+ in PMD (Java)
@@ -261,7 +262,9 @@ end
 \lnPitch{
   \pptBanner{Some Exotic Style Checkers}
   \begin{itemize}
+    \setlength\itemsep{0em}
     \item \href{https://github.com/koalaman/shellcheck}{Shellcheck} for Bash
+    \item \href{https://github.com/hadolint/hadolint}{Hadolint} for Dockerfile
     \item \href{https://github.com/markdownlint/markdownlint}{markdownlint} for Markdown
     \item \href{https://github.com/mrtazz/checkmake}{Checkmake} for Makefile
     \item \href{https://github.com/yegor256/xcop}{xcop} for XML
