--- a/22-code-style/22-code-style.tex
+++ b/22-code-style/22-code-style.tex
@@ -238,6 +238,7 @@ end
 \lnPitch{
   \pptBanner{My Favorite Style Checkers}
   \begin{itemize}
+    \setlength\itemsep{0em}
     \item \href{https://eslint.org/}{ESLint} (2013) for JavaScript
     \item \href{https://clang.llvm.org/extra/clang-tidy/}{Clang-Tidy} (2007?) for C++
     \item \href{https://github.com/pylint-dev/pylint}{Pylint} (2006) for Python
