--- a/01-lines-of-code/01-lines-of-code.tex
+++ b/01-lines-of-code/01-lines-of-code.tex
@@ -107,7 +107,7 @@
 \pptBanner{LoC vs NCSS}
 \begin{multicols}{2}
 {\small\begin{ffcode}
-#!/bin/bash
+#!/usr/bin/env bash
 set -e
 
 # Simple intro:
