--- a/18-defect-density/18-defect-density.tex
+++ b/18-defect-density/18-defect-density.tex
@@ -309,9 +309,10 @@
   \toprule
   Project & Stack & KLoC & Issues & I/KLoC \\
   \midrule
+  \href{https://github.com/tensorflow/tensorflow}{tensorflow} & C++ & 3,600 & 40,200 & 11.2 \\
   \href{https://github.com/flutter/flutter}{flutter} & Dart & 2,100 & 103,000 & 49.0 \\
   \href{https://github.com/rust-lang/rust}{rust} & Rust & 2,100 & 56,500 & 26.9 \\
-  \href{https://github.com/tensorflow/tensorflow}{tensorflow} & C++ & 3,600 & 40,200 & 11.2 \\
+  \href{https://github.com/apache/spark}{spark} & Java & 1,400 & 53,750 & 38.4 \\
   \href{https://github.com/apache/kafka}{kafka} & Java & 980 & 19,800 & 20.2 \\
   \href{https://github.com/angular/angular}{angular} & TypeScript & 800 & 28,700 & 35.9 \\
   \href{https://github.com/google/guava}{guava} & Java & 346 & 3,600 & 10.4 \\
