--- a/18-defect-density/18-defect-density.tex
+++ b/18-defect-density/18-defect-density.tex
@@ -304,18 +304,18 @@
 
 \lnThought{On average, modern projects have 10-50 defects per KLoC.}
 
-\lnPitch{\pptBanner{A few open source projects (12 Feb 2025)}
-  {\ttfamily\small\begin{tabular}{llrrr}
+\lnPitch{\pptBanner{A few open source projects}
+  {\ttfamily\small\begin{tabular}{llrrrl}
   \toprule
-  Project & Stack & KLoC & Issues & I/KLoC \\
+  Project & Stack & KLoC & Issues & I/KLoC & When \\
   \midrule
-  \href{https://github.com/tensorflow/tensorflow}{tensorflow} & C++ & 3,600 & 40,200 & 11.2 \\
-  \href{https://github.com/flutter/flutter}{flutter} & Dart & 2,100 & 103,000 & 49.0 \\
-  \href{https://github.com/rust-lang/rust}{rust} & Rust & 2,100 & 56,500 & 26.9 \\
-  \href{https://github.com/apache/spark}{spark} & Java & 1,400 & 53,750 & 38.4 \\
-  \href{https://github.com/apache/kafka}{kafka} & Java & 980 & 19,800 & 20.2 \\
-  \href{https://github.com/angular/angular}{angular} & TypeScript & 800 & 28,700 & 35.9 \\
-  \href{https://github.com/google/guava}{guava} & Java & 346 & 3,600 & 10.4 \\
+  \href{https://github.com/tensorflow/tensorflow}{tensorflow} & C++ & 3,600 & 40,200 & 11.2 & Feb-25 \\
+  \href{https://github.com/flutter/flutter}{flutter} & Dart & 2,100 & 103,000 & 49.0 & Feb-25 \\
+  \href{https://github.com/rust-lang/rust}{rust} & Rust & 2,100 & 56,500 & 26.9 & Feb-25 \\
+  \href{https://github.com/apache/spark}{spark} & Java & 1,400 & 53,750 & 38.4 & Sep-25 \\
+  \href{https://github.com/apache/kafka}{kafka} & Java & 980 & 19,800 & 20.2 & Sep-25 \\
+  \href{https://github.com/angular/angular}{angular} & TypeScript & 800 & 28,700 & 35.9 & Feb-25 \\
+  \href{https://github.com/google/guava}{guava} & Java & 346 & 3,600 & 10.4 & Feb-25 \\
   \bottomrule
   \end{tabular}}\par
   All repositories are open source.}
