--- a/18-defect-density/18-defect-density.tex
+++ b/18-defect-density/18-defect-density.tex
@@ -305,7 +305,7 @@
 \lnThought{On average, modern projects have 10-50 defects per KLoC.}
 
 \lnPitch{\pptBanner{A few open source projects}
-  {\ttfamily\small\begin{tabular}{llrr>{\bfseries}rl}
+  {\ttfamily\small\begin{tabular}{llrr>{\color{orange}}rl}
   \toprule
   Project & Stack & KLoC & Issues & I/KLoC & When \\
   \midrule
